--- a/style.css
+++ b/style.css
@@ -1,154 +1,160 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
-  --font: "Montserrat", sans-serif;
+	--font: 'Montserrat', sans-serif;
 }
 
 body {
-  font-family: var(--font);
-  font-weight: 600;
+	font-family: var(--font);
+	font-weight: 600;
 }
 
 .container {
-  width: 960px;
-  margin: auto;
+	width: 960px;
+	margin: auto;
 }
 
 /* Header */
 
 header {
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	min-height: 300px;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-top: 10px;
+	margin-bottom: 10px;
 }
 
 .content__img {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 200px;
+	padding: 10px 0;
 }
 
 .content__img > img {
-  height: 100%;
-  width: 70%;
-  border-radius: 60px;
+	max-height: 100%;
+	width: 70%;
+	border-radius: 30px;
 }
 
 .name {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 29px;
 }
 
 .city {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 17px;
-  color: #a9a9a9;
-  margin: 10px 0;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 17px;
+	color: #a9a9a9;
+	margin: 10px 0;
 }
 
 .content__social {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	padding: 10px 0;
+	margin: 10px 0;
 }
 
 .post,
 .follower,
 .following {
-  height: 67px;
-  width: 100px;
-  background: #e5e5e5;
-  border-radius: 16px;
-  margin: 0 10px;
-  font-size: 14px;
-  font-weight: 400;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  line-height: 22px;
+	height: 67px;
+	width: 100px;
+	background: #e5e5e5;
+	border-radius: 16px;
+	margin: 0 10px;
+	font-size: 14px;
+	font-weight: 400;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	line-height: 22px;
 }
 
 /* Main && Gallery */
 main {
-  height: 100%;
-  width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 .gallery {
-  /* border: 1px darkslategrey dashed; */
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 10px;
+	/* border: 1px darkslategrey dashed; */
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	grid-gap: 10px;
 }
 
 .card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 16px;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 16px;
 }
 
 .card:nth-child(1) {
-  grid-column: 1 / 3;
-  grid-row: 1;
+	grid-column: 1 / 3;
+	grid-row: 1;
 }
 .card:nth-child(2) {
-  grid-column: 3 / span 8;
-  grid-row: 1;
+	grid-column: 3 / span 8;
+	grid-row: 1;
 }
 .card:nth-child(3) {
-  grid-column: 1 / 5;
-  grid-row: 2;
+	grid-column: 1 / 5;
+	grid-row: 2;
 }
 .card:nth-child(4) {
-  grid-column: 5 / span 6;
-  grid-row: 2 / span 3;
+	grid-column: 5 / span 6;
+	grid-row: 2 / span 3;
 }
 .card:nth-child(5) {
-  grid-row: 3;
-  grid-column: 1 / span 2;
+	grid-row: 3;
+	grid-column: 1 / span 2;
 }
 .card:nth-child(6) {
-  grid-row: 3;
-  grid-column: 3 / 5;
+	grid-row: 3;
+	grid-column: 3 / 5;
 }
 
 /* Footer */
 
 footer {
-  text-align: center;
-  padding: 10px 0;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 17px;
-  color: #a9a9a9;
+	text-align: center;
+	padding: 10px 0;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 17px;
+	color: #a9a9a9;
 }
 
 /* Mobile */
 
 @media screen and (max-width: 480px) {
-  .container {
-    width: 90%;
-    margin: auto;
-  }
+	.container {
+		width: 90%;
+		margin: auto;
+	}
 }
 
 @media screen and (max-width: 720px) {
-  .container {
-    width: 90%;
-    margin: auto;
-  }
+	.container {
+		width: 90%;
+		margin: auto;
+	}
 }
